# gutenberg-text-splitter

./: .gitignore  README.md  TODO  TODO.md  batch-splitter.py  corpus_additions.yaml  corpus_example.yaml  pyproject.toml  requirements.txt  search.py  shelley_lovelace.yaml  splitter  splitter.py
.github/: dependabot.yml
input/: admiral.html  calebwilliams.html  canterburytales.html  chemphil.html  dracula.html  drmoreau.html  frankenstein.html  greatexp.html  grimmsfairytales.html  holmes.html  onruins.html  oz.html  pickwick.html  prideandprejudice.html  timemachine.html  ulysses.html
meta/: update_pg_catalog.sh
