[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "4.14.3"
lxml = "6.1.1"
rich = "15.0.0"
requests = "2.34.2"
pandas = "3.0.3"
certifi = "2026.5.20"
charset-normalizer = "3.4.7"
idna = "3.15"
markdown-it-py = "4.2.0"
mdurl = "0.1.2"
numpy = "2.4.6"
pygments = "2.20.0"
python-dateutil = "2.9.0.post0"
pytz = "2026.2"
six = "1.17.0"
soupsieve = "2.8.3"
typing-extensions = "4.15.0"
tzdata = "2026.2"
urllib3 = "2.7.0"
pyyaml = "^6.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportMissingModuleSource = false
reportOperatorIssue = false
